--- a/Assessment-5-16-24/package.json
+++ b/Assessment-5-16-24/package.json
@@ -23,7 +23,9 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
   }
 }
