--- a/ReactApplication/package.json
+++ b/ReactApplication/package.json
@@ -23,7 +23,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "browser": {
-    "[module-name]": false   
+    "[module-name]": false
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
@@ -31,6 +31,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropdown-select": "^4.11.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "redux": "^5.0.1"
